--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@my-app/shared": "^1.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/common": "10.4.15",
+    "@nestjs/core": "10.4.15",
+    "@nestjs/platform-express": "10.4.15",
     "@nestjs/swagger": "^7.0.0",
+    "@nestjs/typeorm": "11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "pg": "8.13.1",
+    "reflect-metadata": "0.1.14",
+    "rxjs": "^7.8.0",
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -33,4 +36,4 @@
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   }
-} 
+}
