--- a/my-app/packages/frontend/package.json
+++ b/my-app/packages/frontend/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@my-app/shared": "^1.0.0",
+    "@nestjs/common": "11.0.5",
+    "@nestjs/core": "11.0.5",
+    "@nestjs/platform-express": "11.0.5",
+    "@nestjs/typeorm": "11.0.0",
     "@tanstack/react-query": "^4.29.0",
-    "next": "^13.4.0",
+    "axios": "^1.4.0",
+    "next": "15.1.6",
+    "pg": "8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reflect-metadata": "0.2.2",
     "tailwindcss": "^3.3.0",
-    "axios": "^1.4.0"
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -34,4 +41,4 @@
     "postcss": "^8.4.24",
     "typescript": "^5.0.0"
   }
-} 
+}
