--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -6,11 +6,16 @@
     "dev": "nest start --watch",
     "start": "node dist/main",
     "test": "jest",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run -d src/data-source.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/data-source.ts"
   },
   "dependencies": {
     "@my-app/shared": "^1.0.0",
     "@nestjs/common": "10.4.15",
+    "@nestjs/config": "4.0.0",
     "@nestjs/core": "10.4.15",
     "@nestjs/platform-express": "10.4.15",
     "@nestjs/swagger": "^7.0.0",
@@ -20,6 +25,7 @@
     "pg": "8.13.1",
     "reflect-metadata": "0.1.14",
     "rxjs": "^7.8.0",
+    "sqlite3": "5.1.7",
     "typeorm": "0.3.20"
   },
   "devDependencies": {
@@ -31,9 +37,11 @@
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "7.0.3",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "10.9.2",
     "typescript": "^5.0.0"
   }
 }
