--- a/my-app/packages/frontend/package.json
+++ b/my-app/packages/frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "0.2.2",
+    "sqlite3": "5.1.7",
     "tailwindcss": "^3.3.0",
     "typeorm": "0.3.20"
   },
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.14",
+    "cross-env": "7.0.3",
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.4.0",
     "jest": "^29.5.0",
