--- a/my-app/packages/shared/package.json
+++ b/my-app/packages/shared/package.json
@@ -16,6 +16,7 @@
     "@nestjs/typeorm": "11.0.0",
     "pg": "8.13.1",
     "reflect-metadata": "0.2.2",
+    "sqlite3": "5.1.7",
     "typeorm": "0.3.20",
     "zod": "^3.22.0"
   },
@@ -24,6 +25,7 @@
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "7.0.3",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
