--- a/my-app/packages/frontend/package.json
+++ b/my-app/packages/frontend/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -41,6 +41,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.24",
+    "ts-jest": "29.2.5",
     "typescript": "^5.0.0"
   }
 }
