--- a/my-app/packages/shared/package.json
+++ b/my-app/packages/shared/package.json
@@ -21,14 +21,14 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "cross-env": "7.0.3",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.2.5",
     "typescript": "^5.0.0"
   }
 }
