--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@nestjs/platform-express": "10.4.15",
     "@nestjs/swagger": "^7.0.0",
     "@nestjs/typeorm": "11.0.0",
+    "bcrypt": "5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "pg": "8.13.1",
@@ -32,6 +33,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.14",
     "@types/node": "^20.0.0",
