--- a/my-app/packages/frontend/package.json
+++ b/my-app/packages/frontend/package.json
@@ -10,20 +10,12 @@
   },
   "dependencies": {
     "@my-app/shared": "^1.0.0",
-    "@nestjs/common": "11.0.5",
-    "@nestjs/core": "11.0.5",
-    "@nestjs/platform-express": "11.0.5",
-    "@nestjs/typeorm": "11.0.0",
     "@tanstack/react-query": "^4.29.0",
     "axios": "^1.4.0",
     "next": "15.1.6",
-    "pg": "8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reflect-metadata": "0.2.2",
-    "sqlite3": "5.1.7",
-    "tailwindcss": "^3.3.0",
-    "typeorm": "0.3.20"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
