--- a/my-app/packages/shared/package.json
+++ b/my-app/packages/shared/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "@nestjs/common": "11.0.5",
-    "@nestjs/core": "11.0.5",
-    "@nestjs/platform-express": "11.0.5",
+    "@nestjs/common": "10.4.15",
+    "@nestjs/core": "10.4.15",
+    "@nestjs/platform-express": "10.4.15",
     "@nestjs/typeorm": "11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "pg": "8.13.1",
-    "reflect-metadata": "0.2.2",
+    "reflect-metadata": "0.1.14",
     "sqlite3": "5.1.7",
     "typeorm": "0.3.20",
     "zod": "^3.22.0"
