refactor: Remove Profile entity and references - Removed profileId from User entity and migration - Removed Profile references from ResponseUserDto - Removed Profile references from user.mock.ts - Cleaned up user-design.md to remove Profile mentions - Kept OAuth rawProfile fields as they are part of OAuth data - All tests passing (193/193) with no regressions

--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -36,12 +36,15 @@
     "@types/bcrypt": "5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.14",
-    "@types/node": "^20.0.0",
+    "@types/node": "20.17.16",
+    "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "cross-env": "7.0.3",
+    "dotenv": "16.4.7",
     "eslint": "^8.0.0",
     "jest": "^29.5.0",
+    "supertest": "7.0.0",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "^5.0.0"
