fix(typescript): Resolve decorator issues by downgrading TypeScript to 4.9.5; refactor(models): Complete JSDoc documentation for all model files; fix(build): Ensure models and services compile successfully without spec files; docs(models): Add comprehensive documentation for User, BaseUser, Organization, LoginProvider, and LoginCredential models; chore(build): Verify experimental decorators configuration in tsconfig.json

--- a/my-app/packages/backend/tsconfig.json
+++ b/my-app/packages/backend/tsconfig.json
@@ -4,7 +4,21 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "target": "es2017",
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   },
   "references": [
     { "path": "../shared" }
