--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -24,6 +24,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "pg": "8.13.1",
+    "pkg-dir": "8.0.0",
     "reflect-metadata": "0.1.14",
     "rxjs": "^7.8.0",
     "sqlite3": "5.1.7",
@@ -32,7 +33,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "10.4.15",
     "@types/bcrypt": "5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.14",
@@ -43,7 +44,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.4.7",
     "eslint": "^8.0.0",
-    "jest": "^29.5.0",
+    "jest": "29.7.0",
     "supertest": "7.0.0",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
