--- a/my-app/packages/frontend/package.json
+++ b/my-app/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^4.29.0",
     "axios": "^1.4.0",
     "next": "15.1.6",
+    "pkg-dir": "8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.0"
@@ -30,8 +31,10 @@
     "cross-env": "7.0.3",
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.4.0",
-    "jest": "^29.5.0",
+    "jest": "29.7.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-environment-node": "29.7.0",
+    "lines-and-columns": "2.0.4",
     "postcss": "^8.4.24",
     "ts-jest": "29.2.5",
     "typescript": "^5.0.0"
