--- a/my-app/packages/shared/package.json
+++ b/my-app/packages/shared/package.json
@@ -13,10 +13,12 @@
     "@nestjs/common": "10.4.15",
     "@nestjs/core": "10.4.15",
     "@nestjs/platform-express": "10.4.15",
+    "@nestjs/swagger": "7.0.0",
     "@nestjs/typeorm": "11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "pg": "8.13.1",
+    "pkg-dir": "8.0.0",
     "reflect-metadata": "0.1.14",
     "sqlite3": "5.1.7",
     "typeorm": "0.3.20",
@@ -29,7 +31,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "cross-env": "7.0.3",
     "eslint": "^8.0.0",
-    "jest": "^29.5.0",
+    "jest": "29.7.0",
+    "jest-environment-node": "29.7.0",
     "ts-jest": "29.2.5",
     "typescript": "^5.0.0"
   }
