--- a/my-app/packages/backend/tsconfig.json
+++ b/my-app/packages/backend/tsconfig.json
@@ -24,5 +24,5 @@
     { "path": "../shared" }
   ],
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "controllers/**.ts", "src/controllers/**"]
 } 
