--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -14,5 +14,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "my-app/packages/backend/src/controllers/**"]
 } 
