--- a/my-app/packages/shared/tsconfig.json
+++ b/my-app/packages/shared/tsconfig.json
@@ -8,6 +8,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*", "../backend/src/models/UserPreferences.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 } 
