Complete authentication system refactoring: Updated build scripts, fixed import paths in backend, added tsconfig.test.json for consolidated testing, added clear-and-build.sh script for thorough build artifact cleanup

--- a/my-app/packages/backend/tsconfig.controllers.json
+++ b/my-app/packages/backend/tsconfig.controllers.json
@@ -5,9 +5,12 @@
       "declaration": true,
       "outDir": "./dist/controllers"
     },
+    "references": [
+      { "path": "./tsconfig.services.json" }
+    ],
     "include": [
-      "src/models/**/*",
-    "src/migrations/helpers.ts"
+      "src/controllers/**/*",
+      "src/utils/**/*"
     ],
     "exclude": [
       "**/*.spec.ts"
