--- a/my-app/packages/backend/package.json
+++ b/my-app/packages/backend/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "lodash": "4.17.21",
     "pg": "8.13.1",
     "pkg-dir": "8.0.0",
     "reflect-metadata": "0.1.14",
