--- a/my-app/packages/backend/tsconfig.models.json
+++ b/my-app/packages/backend/tsconfig.models.json
@@ -7,7 +7,8 @@
   },
   "include": [
     "src/models/**/*",
-    "src/migrations/helpers.ts"
+    "src/migrations/helpers.ts",
+    "src/managers/**/*"
   ],
   "exclude": [
     "**/*.spec.ts"
